Issue-#32: Remove Java applet support
Problem:
Java applet is deprecated and up for removal. The project should not support it
any further.

Solution:
Remove all applet related code.